fix non-supporter avatars being the wrong size

--- a/static/css/pages/profile.css
+++ b/static/css/pages/profile.css
@@ -917,6 +917,11 @@ span.heading-title {
   border-radius: 0.5em !important;
 }
 
+.left-avatar img {
+  border-radius: 18px;
+  width: 140px;
+}
+
 .d-flex.align-items-baseline {
   display: flex;
 }
@@ -954,8 +959,9 @@ span.heading-title {
   width: 140px;
   background-color: #fff;
   background-size: 120%;
-  box-shadow: 0 2px 0 0 #edeef0, 0 0 0 2px #edeef0, 0 3px 3px rgb(0 0 0 / 25%);
+  /* box-shadow: 0 2px 0 0 #edeef0, 0 0 0 2px #edeef0, 0 3px 3px rgb(0 0 0 / 25%); */
   position: relative;
+  border-radius: 18px;
 }
 
 .left-flag {
